--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.14.0",
     "@mui/x-date-pickers": "^6.11.1",
     "@mui/x-date-pickers-pro": "^6.11.1",
+    "@reduxjs/toolkit": "^1.9.5",
     "@types/node": "20.4.2",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.7",
@@ -24,6 +25,7 @@
     "next": "13.4.9",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-redux": "^8.1.2",
     "react-toastify": "^9.1.3",
     "sass": "^1.63.6",
     "typescript": "5.1.6"
